@@ -5,3 +5,4 @@ v 1.1:
 	- Added SuperPerms support so GM will update and provide the permissions to plugins which only support Bukkit Perms.
 	- Added more helpful output to errors on argument lengths.
 	- GroupManager will now attempt to select the default world when using commands instead of failing and telling you to use '/manselect <world>'.
+	- Invalid groups assigned to players in users.yml will no longer cause a crash. GM will now set them to the default group instead.
